--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,8 +1,9 @@
-dash==2.17.1
+dash==3.3.0
 dash-bootstrap-components==1.6.0
 pandas==2.2.3
 plotly==5.24.0
 gunicorn==21.2.0
-mysql-connector-python==9.0.0
+mysqlclient==2.2.4
 numpy==1.26.4
-sqlalchemy==2.0.31
+SQLAlchemy==2.0.31
+
