--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -3,7 +3,8 @@ dash-bootstrap-components==1.6.0
 pandas==2.2.3
 plotly==5.24.0
 gunicorn==21.2.0
-mysqlclient==2.2.4
+mysql-connector-python==9.0.0
 numpy==1.26.4
 SQLAlchemy==2.0.31
+
 
